--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   dio: ^5.8.0+1
+  flutter_downloader: ^1.7.1 # Use the latest version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
