--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.13.1
-  cloud_firestore: ^5.6.8
-  path_provider: ^2.1.5
-  permission_handler: ^12.0.0+1
-  dio: ^5.8.0+1
-  flutter_downloader: ^1.7.1 # Use the latest version
+  firebase_core: ^2.27.0 # Use the latest stable version
+  cloud_firestore: ^4.15.7 # Use the latest stable version
+  flutter_downloader: ^1.11.0 # Use the latest stable version
+  path_provider: ^2.1.2 # Use the latest stable version
+  open_file_plus: ^3.4.1 # Use the latest stable version (open_file is deprecated)
+  permission_handler: ^11.3.0 # Already in your main.dart, ensure it's here too
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
